tests/warnings/iprange4.stderr
warning: This range will yeild no values: IP1 >= IP2
 --> tests/warnings/iprange4.rs:4:23
  |
4 |     let _ = iprange4!("10.0.1.0", "10.0.0.0");
  |                       ^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: This iterator requires the lower IP value first in it's arguments list.

error: invalid IP address syntax
 --> tests/warnings/iprange4.rs:7:23
  |
7 |     let _ = iprange4!("10.0.10", "10.0.0.0");
  |                       ^^^^^^^^^
